--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.20",
     "bootstrap": "^5.3.0-alpha3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0"
