--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.20",
     "bootstrap": "^5.3.0-alpha3",
+    "moment": "^2.29.4",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.0"
